# sudoq

./: .gitignore  CMakeLists.txt
src/: sudoq.cpp
